<resources>
    <string name="app_name">Finance App</string>
    <string name="btn_login">ENTER</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_type">Type</string>
    <string name="txt_first_name">First name</string>
    <string name="txt_surname">Surname</string>
    <string name="txt_help_login">Enter your first and last name to begin using the app</string>
    <string name="txt_title">Title</string>
    <string name="txt_date">Date</string>
    <string name="txt_category">Category</string>
    <string name="txt_transaction">Transaction</string>
    <string name="txt_name">FirstName Surname</string>
    <string name="txt_since">Since:</string>
    <string name="txt_until">Until:</string>
    <string name="txt_change_name">Change current name</string>
    <string name="title_home">Home</string>
    <string name="title_income">Income</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_reset_period">Reset period</string>
    <string name="title_scan_barcode">Scan Barcode</string>
    <string name="title_pick_dates">Select Period</string>
    <string name="title_add_transaction">Add Transaction</string>
    <string name="desc_remove">Removes the transaction</string>
    <string name="desc_category">Current transaction category</string>
    <string name="txt_enter_title">enter title</string>
    <string name="txt_enter_amount">enter amount in dollars</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_sure">Are you sure?</string>
    <string name="txt_yes">YES</string>
    <string name="txt_no">NO</string>
    <string name="error_empty_title">Title is empty</string>
    <string name="error_empty_amount">Amount is empty</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_summary">Summary</string>
    <string name="txt_income">Income:</string>
    <string name="txt_expenses">Expenses:</string>
    <string name="txt_total">Total:</string>
    <string name="txt_dollars">0$</string>
    <string name="error_permissions">Missing permissions</string>
    <string name="txt_barcode_detected">Barcode detected</string>
    <string name="txt_add">Add</string>
    <string name="txt_set">Set</string>
    <string name="txt_add_barcode">Add Barcode</string>
</resources>