<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/blue"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/title_add_transaction"
            app:titleTextColor="@color/black"
            app:menu="@menu/transaction_add_menu"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/tvAddTitle"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:gravity="center"
                        android:text="@string/txt_title"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:hint="@string/txt_enter_title"
                        app:boxCollapsedPaddingTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLength="34"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="#616161"
                            android:textSize="20sp"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAddAmount"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/txt_amount"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:hint="@string/txt_enter_amount"
                        app:boxCollapsedPaddingTop="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="34"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="#616161"
                            android:textSize="20sp"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAddCategory"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/txt_category"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnrCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:dropDownWidth="wrap_content"
                        android:entries="@array/expenditure"
                        android:gravity="center_horizontal"
                        android:popupBackground="@color/blue"
                        android:spinnerMode="dropdown"
                        android:theme="@style/spinnerTheme"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/dark_blue"
                app:strokeWidth="3dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAddDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/txt_date"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <DatePicker
                        android:id="@+id/dpAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>